--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,9 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <img src="./Neom_img.jpg" alt="image" style="display: block;
+    <!-- <img src="./Neom_img.jpg" alt="image" style="display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;">
+    width: 100%;"> -->
   </body>
 </html>
